--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table>
             <tr>
-                <td><img src="C:\Users\asus\Desktop\CV\my photo.jpg" width="130" height="130"></td>
+                <td><img src="my photo.jpg" width="130" height="130"></td>
                 <td>
                     <h4>MOHIT MANDLOI</h4>
                     <P>
