--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
             </tbody>
         </table>
         <hr>
-        <a href="file:///C:/Users/asus/Desktop/contact%20form.html">CONTACT DETAILS</a>
+        <a href="/contact form.html">CONTACT DETAILS</a>
     </body>
 </html>
