--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table>
             <tr>
-                <td><img src="my photo.jpg" width="130" height="130"></td>
+                <td><img src="/my photo.jpg" width="130" height="130"></td>
                 <td>
                     <h4>MOHIT MANDLOI</h4>
                     <P>
@@ -98,6 +98,6 @@
             </tbody>
         </table>
         <hr>
-        <a href="/contact form.html">CONTACT DETAILS</a>
+        <a href="/contactform.html">CONTACT DETAILS</a>
     </body>
 </html>
